--- a/recruiter-server/views/companies.ejs
+++ b/recruiter-server/views/companies.ejs
@@ -22,6 +22,7 @@
                     <th class="px-6 py-3 border border-gray-300">Name</th>
                     <th class="px-6 py-3 border border-gray-300">Website</th>
                     <th class="px-6 py-3 border border-gray-300">Location</th>
+                    <th class="px-6 py-3 border border-gray-300">Verified</th> 
                     <th class="px-6 py-3 border border-gray-300 text-center">Action</th>
                 </tr>
             </thead>
@@ -43,6 +44,9 @@
                                 <a href="<%= company.website %>" class="text-blue-500 hover:underline" target="_blank">Visit</a>
                             </td>
                             <td class="px-6 py-4 border border-gray-300"><%= company.location %></td>
+                            <td class="px-6 py-4 border border-gray-300">
+                                <%= company.verified ? 'Verified' : 'Not Verification' %> 
+                            </td>
                             <td class="px-6 py-4 border border-gray-300 flex items-center gap-4 justify-center">
                                 <form action="/recruiter/delete-company/<%= company._id %>" method="POST">
                                     <button type="submit" class="bg-red-500 hover:bg-red-800 text-white font-bold py-2 px-4 rounded">
@@ -53,16 +57,14 @@
                                     class="bg-green-500 hover:bg-green-800 text-white font-bold py-2 px-4 rounded inline-block text-center">
                                     Edit
                                  </a>
-                                 
                             </td>
                         </tr>
                     <% }) %>
                 <% } else { %>
                     <tr>
-                        <td colspan="5" class="px-6 py-4 text-center text-gray-500">No companies added yet.</td>
+                        <td colspan="6" class="px-6 py-4 text-center text-gray-500">No companies added yet.</td>
                     </tr>
                 <% } %>
-                
             </tbody>
         </table>
     </div>
