--- a/applicant-server/views/profile.ejs
+++ b/applicant-server/views/profile.ejs
@@ -28,25 +28,25 @@
             Us</a></li>
 
 
-            <% if (user) { %>
-              <li class="relative group">
-                <button
-                  class="bg-yellow-400 hover:bg-yellow-500 text-blue-800 font-black py-2 px-4 rounded-full transition-all duration-300 hover:shadow-lg flex items-center">
-                  <% if (user.profileImageId) { %>
-                    <img src="/profile/image" 
-                         class="w-8 h-8 rounded-full object-cover mr-2 border-2 border-blue-800"
-                         alt="Profile Image">
-                  <% } else { %>
-                    <div class="w-8 h-8 rounded-full bg-blue-800 text-white flex items-center justify-center mr-2 font-bold text-sm">
-                      <%= user.firstName.charAt(0).toUpperCase() %>
-                    </div>
+        <% if (user) { %>
+          <li class="relative group">
+            <button
+              class="bg-yellow-400 hover:bg-yellow-500 text-blue-800 font-black py-2 px-4 rounded-full transition-all duration-300 hover:shadow-lg flex items-center">
+              <% if (user.profileImageId) { %>
+                <img src="/profile/image" class="w-8 h-8 rounded-full object-cover mr-2 border-2 border-blue-800"
+                  alt="Profile Image">
+                <% } else { %>
+                  <div
+                    class="w-8 h-8 rounded-full bg-blue-800 text-white flex items-center justify-center mr-2 font-bold text-sm">
+                    <%= user.firstName.charAt(0).toUpperCase() %>
+                  </div>
                   <% } %>
-                  <%= user.firstName || 'Profile' %>
-                  <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-1" fill="none" viewBox="0 0 24 24"
-                    stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
-                  </svg>
-                </button>
+                    <%= user.firstName || 'Profile' %>
+                      <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-1" fill="none" viewBox="0 0 24 24"
+                        stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
+                      </svg>
+            </button>
             <div
               class="absolute right-0 mt-2 w-48 bg-white rounded-lg shadow-lg opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-300 z-50 transform -translate-y-2 group-hover:translate-y-0">
               <a href="/profile" class="block px-4 py-2 text-blue-800 hover:bg-blue-50 rounded-t-lg">My Profile</a>
@@ -75,25 +75,25 @@
           <li><a href="/contact" class="block px-4 py-2 hover:bg-blue-500 hover:text-yellow-500 text-center">Contact
               Us</a></li>
 
-              <% if (user) { %>
-                <li class="relative group flex justify-center">
-                  <button
-                    class="bg-yellow-400 hover:bg-blue-500 text-blue-800 font-black py-2 px-4 rounded-full transition-all duration-300 hover:shadow-lg flex items-center">
-                    <% if (user.profileImageId) { %>
-                      <img src="/profile/image" 
-                           class="w-8 h-8 rounded-full object-cover mr-2 border-2 border-blue-800"
-                           alt="Profile Image">
-                    <% } else { %>
-                      <div class="w-8 h-8 rounded-full bg-blue-800 text-white flex items-center justify-center mr-2 font-bold text-sm">
-                        <%= user.firstName.charAt(0).toUpperCase() %>
-                      </div>
+          <% if (user) { %>
+            <li class="relative group flex justify-center">
+              <button
+                class="bg-yellow-400 hover:bg-blue-500 text-blue-800 font-black py-2 px-4 rounded-full transition-all duration-300 hover:shadow-lg flex items-center">
+                <% if (user.profileImageId) { %>
+                  <img src="/profile/image" class="w-8 h-8 rounded-full object-cover mr-2 border-2 border-blue-800"
+                    alt="Profile Image">
+                  <% } else { %>
+                    <div
+                      class="w-8 h-8 rounded-full bg-blue-800 text-white flex items-center justify-center mr-2 font-bold text-sm">
+                      <%= user.firstName.charAt(0).toUpperCase() %>
+                    </div>
                     <% } %>
-                    <%= user.firstName || 'Profile' %>
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-1" fill="none" viewBox="0 0 24 24"
-                      stroke="currentColor">
-                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
-                    </svg>
-                  </button>
+                      <%= user.firstName || 'Profile' %>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-1" fill="none" viewBox="0 0 24 24"
+                          stroke="currentColor">
+                          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
+                        </svg>
+              </button>
               <div
                 class="absolute right-0 mt-2 w-48 bg-white rounded-lg shadow-lg opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-300 z-50 transform -translate-y-2 group-hover:translate-y-0 flex justify-center flex-col">
                 <a href="/profile" class="block px-4 py-2 text-blue-800 hover:bg-blue-50 rounded-t-lg">My Profile</a>
